screenshots included for app store

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -41,5 +41,12 @@
       "type": "image/x-icon"
     }
   ],
+  "screenshots": [
+    {
+      "src": "/screenshots/gameplay.png",
+      "sizes": "1280x720",
+      "type": "image/png"
+    }
+  ],
   "id": "dadotz"
 }
