fix syntax error

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "dadotz"
+  "id": "dadotz",
   "background_color": "#2b2b2b",
   "description": "Play DaDotz, a fun board game where tiles explode when they reach 4. Click to grow tiles and strategize your moves! Created by Heinz Ketchup.",
   "dir": "ltr",
