--- a/public/manifest.json
+++ b/public/manifest.json
@@ -59,7 +59,8 @@
   "related_applications": [
     {
       "platform": "play",
-      "id": "com.JindoBlu.FourPlayers"
+      "id": "com.JindoBlu.FourPlayers",
+      "url": "https://play.google.com/store/apps/details?id=com.JindoBlu.FourPlayers"
     }
   ]
 }
