--- a/public/manifest.json
+++ b/public/manifest.json
@@ -62,5 +62,6 @@
       "id": "com.JindoBlu.FourPlayers",
       "url": "https://play.google.com/store/apps/details?id=com.JindoBlu.FourPlayers"
     }
-  ]
+  ],
+  "prefer_related_applications": false
 }
