--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "3.3.3",
     "serve": "^14.2.3",
     "supabase": "^1.167.1",
     "typescript": "~5.5.2"
